# jobhunter

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
docs/: JobHunter_Design_Doc.md
docs/plans/: 2026-02-12-job-search-pipeline-v1.md
docs/specs/: 0001-job-search-pipeline-v1.md
