[project]
name = "jobhunter"
version = "0.1.0"
description = "Automated job search pipeline: scrape niche boards, score matches, tailor resumes, notify via Telegram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "python-telegram-bot>=22.6",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
